--- a/src/components/FixedHeader.astro
+++ b/src/components/FixedHeader.astro
@@ -17,7 +17,7 @@ const navLinks = [
 ] as const;
 ---
 
-<header id="fixed-header" class="fixed-header" transition:persist>
+<header id="fixed-header" class="fixed-header" transition:persist transition:name="header">
   <div class="header-inner">
     <div class="header-left">
       <LogoMark href="/" label="Go to home" container="page" onClick="scrollToTop" />
