chore: eslint tweaks

--- a/src/layouts/Post.astro
+++ b/src/layouts/Post.astro
@@ -9,7 +9,7 @@
 import Base from './Base.astro';
 import JsonLd from '../components/JsonLd.astro';
 import SheenText from '../components/SheenText.astro';
-import { formatDate, formatUpdatedDate } from '../utils/formatDate';
+import { formatDate, formatUpdatedDate } from '../utils/format-date';
 import type { CollectionEntry } from 'astro:content';
 
 interface Props {
