--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -8,7 +8,7 @@
 
 import { getCollection, getEntry, render } from 'astro:content';
 import Post from '../../layouts/Post.astro';
-import { calculateReadingTime } from '../../utils/readingTime';
+import { calculateReadingTime } from '../../utils/reading-time';
 
 const { slug } = Astro.params;
 
